feat: 1 loyalty